--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,31 +4,31 @@ services:
   mongo:
     image: mongo
     restart: always
+    container_name: mongo
     ports:
       - 27017:27017
-    env_file:
-      - .env
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_INITDB_DATABASE: expense-tracker
     volumes:
       - mongo:/data/db
 
   mongo-express:
     image: mongo-express
     restart: always
+    container_name: mongo-express
+    depends_on:
+      - mongo
     ports:
       - 8081:8081
-    env_file:
-      - .env
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
-      ME_CONFIG_MONGODB_URL: ${MONGO_URI}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017
 
   redis:
     image: redis/redis-stack
     restart: always
+    container_name: redis-stack
     ports:
       - 10001:10001
       - 13333:13333
